--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
-	"name": "angular",
-	"version": "1.0.0",
-	"dependencies": {
-		"bootstrap": "latest",
-		"angular": "latest",
-		"angular-ui-router": "latest"
-	}
+  "name": "angular",
+  "version": "1.0.0",
+  "dependencies": {
+    "bootstrap": "latest",
+    "angular": "latest",
+    "angular-ui-router": "latest",
+    "bootstrap-material-design": "^4.0.2"
+  }
 }
