--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "starter-node-angular",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.5.1",
-    "mongoose": "^3.8.0",
+    "bcrypt": "^1.0.2",
     "body-parser": "~1.4.2",
-    "method-override": "~2.0.2"
+    "express": "^4.5.1",
+    "method-override": "~2.0.2",
+    "mongoose": "^3.8.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
